--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,10 +1,7 @@
 name: 刷步数
 
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+  workflow_dispatch:
   schedule:
     - cron: 45 2 * * *
   watch:
